# appgoblin

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: app.py  example_config.toml  make_sitemap.py  pyproject.toml
backend/api_app/: analytics.py  guards.py  models.py  report_exports.py  utils.py
backend/api_app/controllers/: apps.py  categories.py  companies.py  creatives.py  developers.py  exports.py  health.py  keywords.py  rankings.py  scry.py  sdks.py  v1_companies.py
backend/api_app/controllers/public/v1/: apps.py  companies.py  docs.py  keywords.py  public_models.py
backend/api_app/mcp/: __init__.py  controller.py  docs.py  engine.py  serialize.py  server.py  state.py
backend/api_app/mcp/tools/: __init__.py  _auth.py  apps.py  companies.py  keywords.py
backend/config/: __init__.py
backend/dbcon/: connections.py  queries.py  static.py  utils.py
backend/dbcon/sql/: insert_sdk_scan_request.sql  query_adtech_category_type.sql  query_adtech_type.sql  query_advertiser_creative_rankings.sql  query_advertiser_creative_rankings_top.sql  query_app_adstxt_overview.sql  query_app_api_details.sql  query_app_country_metrics_history.sql  query_app_global_metrics_history.sql  query_app_history.sql  query_app_keywords_history.sql  query_app_rating_histogram.sql  query_app_sdk_details.sql  query_app_sdk_overview.sql  query_app_version_timeline.sql  query_apps_crossfilter.sql  query_apps_sdk_overview.sql  query_category_tag_type_stats.sql  query_category_totals.sql  query_child_companies.sql  query_combined_companies_history.sql  query_combined_companies_history_static.sql  query_companies_categories_types_app_counts.sql  query_companies_category_tag_stats.sql  query_companies_category_tag_type_stats.sql  query_companies_category_type_top.sql  query_companies_counts.sql  query_companies_parent_category_tag_stats.sql  query_companies_parent_overview.sql  query_companies_parent_overview_category.sql  query_companies_parent_tag_stats.sql  query_companies_parent_top.sql  query_companies_tag_stats.sql  query_companies_tag_type_stats.sql  query_company_adstxt_ad_domain_overview.sql  query_company_adstxt_ad_domain_parent_overview.sql  query_company_adstxt_publisher_id.sql  query_company_adstxt_publisher_id_apps_overview.sql  query_company_adstxt_publishers_overview.sql  query_company_adstxt_publishers_parent_overview.sql  (+67 more)
backend/reports/: README.md  __init__.py  run_reports.py
backend/reports/queries/: query_report_z_scores.sql
backend/reports/queries/ad-user-acquisition-2026-february/: creatives.sql  reach.sql
backend/reports/queries/ad-user-acquisition-2026-june/: ad_networks_landscape.sql  all_advertisers.sql  creatives.sql  impact_growth.sql  new_advertisers.sql  reach.sql  summary_executive.sql
backend/reports/queries/ad-user-acquisition-2026-march/: ad_networks_landscape.sql  impact_growth.sql
backend/reports/queries/ad-user-acquisition-2026-may/: impact_growth.sql  new_advertisers.sql  reach.sql  summary_executive.sql
backend/tests/: conftest.py  test_analytics.py  test_companies_trends.py  test_guards.py  test_v1_api.py
blog/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/: .env  .env.production  .gitignore  appgoblin-theme.css  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
scripts/: app-store-api.service  appgoblin-api.service  (+7 more)
(+493 files in other folders)
