[project]
authors = [{ name = "James O'Claire" }]
name = "appgoblin-backend"
description = "Backend server for appgoblin"
version = "0.0.1"

dependencies = [
    "psycopg-binary",
    "gunicorn",
    "litestar[standard]",
    "pandas",
    "numpy",
    "sqlalchemy",
    "adscrawler @ https://github.com/ddxv/adscrawler",
]

[project.optional-dependencies]
dev = ["pre-commit", "sshtunnel", "umami-analytics"]


[tool.ruff]
#select = ["E", "W", "F", "B", "I", "N", "UP"]
lint.select = ["ALL"]

target-version = 'py312'

lint.ignore = [
    # "E501",   # line length
    "W291",   # trailing space at end of line
    "G",      # Ignore pyflake logging as it does not like f-strings in log messages.
    "RET504", # Unnecessary assignment to variable before return, but I prefer for readability.
    "PD010",  # avoid pivot instead use pivot_table, great but also applies to unstack which is much more complicated
    "D211",   # Suppress ruff internal conflict
    "D213",   # Suppress ruff internal conflict
    "COM812", # ruff-format requested ignore to avoid conflict
    "D203",   # ruff-format requested ignore to avoid conflict
    "ISC001", # ruff-format requested ignore to avoid conflict
]


# Avoid trying to fix flake8-bugbear (`B`) violations.
lint.unfixable = ["B"]

lint.fixable = ["ALL"]

exclude = ["tests/*"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.sqlfluff.core]
templater = 'placeholder'
verbose = 0
dialect = 'postgres'
large_file_skip_byte_limit = 0
exclude_rules = 'AM04'


[tool.sqlfluff.templater.placeholder]
param_style = 'colon'
